Title banner responsive done

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </nav> 
     <main>
-      <section class="hidden title flex justify-evenly items-center bg-[#FFFBF0]">
+      <section class="title flex flex-col justify-center items-center bg-[#FFFBF0] py-10 md:flex-row md:justify-evenly">
         <div class="title-content flex flex-col gap-3">
           <div class="title-header font-bebus text-7xl">
             <span class="text-[#FABE4C]">Be the Penguins</span> <br />of Winter
@@ -89,10 +89,11 @@
             </button>
           </div>
         </div>
-        <div class="title-img w-96">
+        <div class="title-img w-96 py-5 md:py-0">
           <img src="./images/model.png" alt="" />
         </div>
       </section>
+      
     </main>
   </body>
 </html>
